<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MobiTrack</string>
    <string name="contact_us">Contact Us</string>

    <!--<string name="google_map_key_my">AIzaSyDpIfAvz9xaXCiBueo3SNYOj6rgqvRJxFk</string>-->
    <string name="google_map_key">AIzaSyDO_N2owPZW7z7-iB60t_EGFZPk73-HL7c</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!--Navigation Drawer Constant-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="loading">Loading...Please Wait</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user_basic_info">User Basic Info</string>
    <string name="profile_image">Profile Image</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>

    <string name="prompt_company_name">Company Name</string>
    <string name="prompt_company_desc">Company Short Description</string>
    <string name="company_logo"><u>Company Logo</u></string>
    <string name="company_info"><u>Company Info</u></string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="select_user">Select User</string>
    <string name="share">Share</string>
    <string name="search_by_user_email">Search By User Name</string>
    <string name="table_view">Table View</string>
    <string name="chart_view">Chart View</string>

    <string name="face_book_link">https://www.facebook.com/mobitrackbd</string>
    <string name="twitter_link">https://twitter.com/mobitrack_bd</string>
    <string name="linked_in_link">https://www.linkedin.com/in/mobitrack-bd/</string>


    <string-array name="hour_array">
        <item>12:01 AM to 01:00 AM</item>
        <item>01:01 AM to 02:00 AM</item>
        <item>02:01 AM to 03:00 AM</item>
        <item>03:01 AM to 04:00 AM</item>
        <item>04:01 AM to 05:00 AM</item>
        <item>05:01 AM to 06:00 AM</item>
        <item>06:01 AM to 07:00 AM</item>
        <item>07:01 AM to 08:00 AM</item>
        <item>08:01 AM to 09:00 AM</item>
        <item>09:01 AM to 10:00 AM</item>
        <item>10:01 AM to 11:00 AM</item>
        <item>11:01 AM to 12:00 PM</item>

        <item>12:01 PM to 01:00 PM</item>
        <item>01:01 PM to 02:00 PM</item>
        <item>02:01 PM to 03:00 PM</item>
        <item>03:01 PM to 04:00 PM</item>
        <item>04:01 PM to 05:00 PM</item>
        <item>05:01 PM to 06:00 PM</item>
        <item>06:01 PM to 07:00 PM</item>
        <item>07:01 PM to 08:00 PM</item>
        <item>08:01 PM to 09:00 PM</item>
        <item>09:01 PM to 10:00 PM</item>
        <item>10:01 PM to 11:00 PM</item>
        <item>11:01 PM to 12:00 AM</item>
    </string-array>


    <string name="about_us_details">
        Our Vehicle Tracking Service (VTS) is a Global Positioning System (GPS) based service to provide you with the security and tracking of your vehicle such as Cars, Motorbikes and Vans etc.\n\n
        The Vehicle Tracking System (VTS) device will connect be with your vehicle using SIM card and internet connections in it. It will locate your vehicle’s movement such as position of your car, speed limit, and engine status on map will be visible in mobile apps and web.\n\n
        We are offering innovative and cost effective vehicle tracking solutions in the country. We also offer task force tracking for businesses too, ensuring your vehicles are kept safe &amp; protected, whatever use they have.\n\n
        We obtained licensed from Bangladesh Telecommunication Regulatory Commission (BTRC). Our vehicle tracking system (VTS) is an unique way for the companies and individuals to monitor and control their cars, motorbikes, jeeps, trucks and other vehicles to their accurate details by using their mobile apps, web or through sms.
    </string>

    <string-array name="about_slider">
        <item>http://mobitrackbd.com/wp-content/uploads/2016/10/Slider1.jpg</item>
        <item>http://mobitrackbd.com/wp-content/uploads/2016/10/Slide21.jpg</item>
    </string-array>
    <string name="mobi_phone">+8801707110333</string>
    <string name="mobitrack_facebook">facebook</string>
    <string name="login_visit">VISIT US</string>
    <string name="mobitrack_google_plus">Google</string>
    <string name="mobitrack_twitter">Twitter</string>
    <string name="mobitrack_call">Call</string>
    <string name="email_icon">Email Icon</string>
    <string name="login_email">Enter Email Address</string>
    <string name="password_icon">Password</string>
    <string name="register">register now</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="logo">Logo</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_phone">Driver Phone</string>
    <string name="model">Model</string>
    <string name="update">update</string>
    <string name="driver">Driver</string>
    <string name="status">Status</string>
    <string name="browse">Browse</string>

    <string name="payment_title">You can make payments from your bKash account to our <b>bKash Merchant</b> account</string>


    <string-array name="title_list">
        <item>Step 1</item>
        <item>Step 2</item>
        <item>Step 3</item>
        <item>Step 4</item>
        <item>Step 5</item>
        <item>Step 6</item>
        <item>Step 7</item>
        <item>Done !</item>
    </string-array>

    <string-array name="content_list">
        <item>Go to your bKash Mobile Menu by Dialing <b>*247#</b></item>
        <item>Choose <b>Payment</b></item>
        <item>Enter <b>01707110555</b> Number</item>
        <item>Enter the <b>amount</b> you want to pay</item>
        <item>Enter a reference against your payment <b>(Your Customer ID)</b> </item>
        <item>Enter <b>1</b> as Counter Number</item>
        <item>Now Enter your bKash Mobile Menu <b>PIN</b> to confirm</item>
        <item>You will receive a confirmation message from <b>us and bKash</b></item>
    </string-array>


    <string-array name="key_array">
        <item>AIzaSyCanYnkUp8kjWil34FCeo5pBKbJYn-BUwE</item>
        <item>AIzaSyAdNXH0ugp5qB4YYHdcVPx_peIaU13rQWo</item>
        <item>AIzaSyAoInjTYjk74YTKTXVipRyZGF67xXrXxDo</item>
        <item>AIzaSyCnpU2qFuYBpuHVAbFXzYWdM7fdZO-iaXk</item>
        <item>AIzaSyDfLEJt390nlkMJJIyrvP72KqXOfKpQGJc</item>
        <item>AIzaSyBxk4U7lVLCewsKSAes6o3S8L9KlYez6Yw</item>
        <item>AIzaSyAOzvXz7UIWlsQJ_3t3rq-Ao9DNed0rQWo</item>
        <item>AIzaSyBn2kue28FBYn2JdvKkF4fWXQeLA-XQaBE</item>
        <item>AIzaSyD_CEWe7Mx17IHootim_hUiIhYa_71hzFw</item>
    </string-array>


    <string name="life_time">2019-06-29 06:12:12</string>
    <string name="forgotten_password">FORGOTTEN PASSWORD?</string>
    <string name="mileage">Mileage</string>
    <string name="registration_no">Registration Number</string>
    <string name="home">Home</string>
    <string name="notification">Notifications</string>
    <string name="alert">Alert</string>
    <string name="expense">Expense</string>
    <string name="payment">Payment</string>
    <string name="bill_status">Bill Status</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="password_reset_request">Password Reset Request</string>
    <string name="tax_and_insurance">Tax and Insurance</string>
    <string name="channel_name">Alert Channel</string>
    <string name="channel_description">Give Alart When Applied Change</string>
    <string name="search_user_by_email">Search User by Email</string>
    <string name="undefined">Undefined</string>
    <string name="profile">Profile</string>
    <string name="organization_name">Organization Name</string>
    <string name="complete">Complete</string>
    <string name="error">Error</string>
    <string name="payment_guide">Payment Guide</string>


    <string name="account_name">Account Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="account_entry_form">Account Entry Form</string>
    <string name="transaction_entry_form">Transaction Entry Form</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="tranaction_date">Transaction Date</string>
    <string name="invoice_no">Invoice No</string>
    <string name="purpose">Purpose</string>
    <string name="amount">Amount</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="new_transaction">New Transaction</string>
    <string name="to">To</string>
    <string name="head_name">Head Name</string>
    <string name="select_head">Select Head</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>

    <string name="admin">Admin</string>
    <string name="customers">Customers</string>
    <string name="vehicles">Vehicles</string>
    <string name="active">Active</string>
    <string name="inactive">In-active</string>
    <string name="device_sim_number">Device SIM Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="congestion_consumption">Fuel Lit/Hr in Congestion</string>
    <string name="distance">Distance</string>
    <string name="fuel">Fuel</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="idle_time">Idle Time</string>
    <string name="running_time">Running Time</string>
    <string name="congestion_time">Congestion Time</string>
    <string name="re_connect">Re-Connect</string>


    <string-array name="vehicle_type_array">
        <item>CAR</item>
        <item>BIKE</item>
        <item>MICRO-BUS</item>
        <item>BUS</item>
        <item>TRUCK</item>
        <item>CNG</item>
        <item>WATER-VESSEL</item>
    </string-array>

    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


</resources>
