<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MaterialAnimations.TextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="@dimen/large_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large_padding"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_driver_name">

            <EditText
                android:id="@+id/driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/driver_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_driver_phone">

            <EditText
                android:id="@+id/driver_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/driver_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_model">

            <EditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_no"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_milage">

            <EditText
                android:id="@+id/mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mileage"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_congestion_consumption">

            <EditText
                android:id="@+id/congestion_consumption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/congestion_consumption"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>


       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="130dp">

           <TextView
               android:layout_marginTop="12dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Driver Photo"
               android:textSize="15sp"
               android:textColor="@android:color/white"
               android:id="@+id/dp"/>

           <ImageView
               android:layout_marginTop="@dimen/small_padding"
               android:id="@+id/driver_image"
               android:layout_below="@+id/dp"
               android:layout_width="96dp"
               android:layout_height="96dp" />

           <Button
               android:id="@+id/select"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_alignParentBottom="true"
               android:text="@string/browse"/>

       </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/update"
            android:background="@drawable/register_button_back"
            android:id="@+id/update"/>

    </LinearLayout>

</RelativeLayout>
