<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/medium_padding"
                android:textColorHint="@color/dark_grey"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/ti_name">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/medium_padding"
                android:textColorHint="@color/dark_grey"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/ti_phone">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/phone"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/medium_padding"
                android:textColorHint="@color/dark_grey"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/ti_address">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/medium_padding"
                android:textColorHint="@color/dark_grey"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/ti_company">

                <EditText
                    android:id="@+id/et_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/organization_name"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Customer status"
                    android:textSize="16sp"/>

                <RadioGroup
                    android:layout_marginStart="@dimen/large_padding"
                    android:id="@+id/radio_gr_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio_inactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inactive" />

                </RadioGroup>

            </LinearLayout>




            <Button
                style="@style/MyButton"
                android:layout_marginTop="@dimen/default_margin"
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>